# build

./: .gitignore  AGENTS.md  Dockerfile-ansible  Dockerfile-arm64  Dockerfile-autoscaler  Dockerfile-backstage  Dockerfile-bpftool  Dockerfile-build  Dockerfile-capi  Dockerfile-captain  Dockerfile-cephcsi  Dockerfile-cert  Dockerfile-cert-istio-csr  Dockerfile-ciliumagent  Dockerfile-cni  Dockerfile-dcgm  Dockerfile-defaultbackend  Dockerfile-dnsperf  Dockerfile-dnstap  Dockerfile-e2e  Dockerfile-envoy  Dockerfile-esmultus  Dockerfile-etcd  Dockerfile-etcdcluster  Dockerfile-falco  Dockerfile-fio  Dockerfile-firecracker  Dockerfile-flannel  Dockerfile-gvisor  Dockerfile-gw  Dockerfile-helm  Dockerfile-istio  Dockerfile-istiod  Dockerfile-istioproxy  Dockerfile-k8s  Dockerfile-k8snew  Dockerfile-kcrowplugin  Dockerfile-kiali  Dockerfile-kube  Dockerfile-kubeovn  (+24 more)
capi-examples/: crd-install-job.yaml  deployments.yaml
examples/: audit.yaml  csr.yaml  deploy-example.yaml  dnsperf.yaml  dnstap.yaml  ds-all-taint.yaml  ingress.yaml  logout.yaml  mark.yaml  nodelocaldns.yaml  resourcequota.yaml  runtime-pod.yaml  sa-role-bing.yaml  stress.yaml  sts.yaml
examples-client/: listwatch.go
gfwlist/: go.mod  main.go
ingress/: Dockerfile  Dockerfile-1.9  Dockerfile-ingress  Dockerfile-ingress-1.9  Dockerfile-nginx  build-0.49-alpine.sh  build-0.49.sh  build-1.9.sh  build-nginx-1.27.sh  build-nginx.sh
kata-image/: Dockerfile  build.sh  cargo-config.toml  (+3 more)
source/hello-rs/: Cargo.toml  build.rs
source/hello-rs/proto/: helloworld.proto
source/hello-rs/src/: client.rs  server.rs
(+199 files in other folders)
